update home news styling + fix white space footer

--- a/assets/sass/partials/_home.scss
+++ b/assets/sass/partials/_home.scss
@@ -67,9 +67,61 @@
         flex-direction: column;
     }
 
-    img {
-        width: 100%;
+    a {
+        display:block;
+        line-height: 1;
+        padding-bottom:34px;
+        transform:scale(1);
+        transition:transform 150ms ease-out;
+
+        &:hover, &:focus {
+            transform:scale(1.04);
+
+            picture {
+
+                &:after {
+                    background-color:rgba(0,0,0,0.1);
+                }
+            }
+        }
+
+        &:active {
+            transform:scale(1);
+        }
+
+        &:before {
+            content:'';
+            position: absolute;
+            top:0;
+            right:0;
+            bottom: 0;
+            left:0;
+            background-image:url('../assets/img/img-back-shape.svg');
+            background-repeat:no-repeat;
+            z-index: -1;
+        }
+    }
+    
+    img, picture {
         clip-path: url(#mask);
+        line-height: 1;
+        display:block;
+    }
+
+    picture {
+        position: relative;
+        
+        &:after {
+            content:'';
+            position: absolute;
+            top:0;
+            right:0;
+            bottom: 0;
+            left:0;
+            background-color:rgba(0,0,0,0.33);
+            z-index: 1;
+            transition:background-color 150ms ease-out;
+        }
     }
 }
 
